20250315-fix: fix with deactivating user